tests/snapshots/examples_fixtures/errors__expected_token_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/expected_token_error.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `,` or `)` after argument, got ;.

  --> examples/errors/expected_token_error.flx:2:18
  |
2 |     print((1 + 2);
  |                  ^
== stdout ==
<not executed>
